--- a/hello world.html
+++ b/hello world.html
@@ -1,1 +1,11 @@
-html is coming soon!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>my hello world webpage</title>
+
+    </head>
+    <body>
+        <h1>Hello world!</h1>
+        <p>happy to see you!</p>
+    </body>
+</html>
